screensaver: Wait 5 seconds before uninhibiting screensaver

Otherwise the screensaver might come on in between 2 movies.

See https://bugzilla.gnome.org/show_bug.cgi?id=705942#c7